<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.therm.MainActivity">

   <RelativeLayout
       android:id="@+id/relativeLayout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginLeft="16dp"
       android:layout_marginRight="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintLeft_toLeftOf="parent">

      <CheckBox
          android:id="@+id/TimeZone1_Enable"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"


          android:layout_above="@+id/TimeZone1_Start"
          android:layout_alignEnd="@+id/ReferencedToTheHour"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_alignRight="@+id/ReferencedToTheHour"
          android:text="@string/checkBox_Time1" />

      <Button
          android:id="@+id/TimeZone1_Start"
          android:layout_width="80dp"
          android:layout_height="wrap_content"

          android:layout_above="@+id/TimeZone2_Enable"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_toLeftOf="@+id/TimeZone2_Start_Text"
          android:layout_toStartOf="@+id/TimeZone2_Start_Text"
          android:text="@string/button_StartTime1"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/TimeZone1_Start_Text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/TimeZone2_Enable"
          android:layout_alignTop="@+id/TimeZone1_Start"
          android:layout_toEndOf="@+id/TimeZone1_Start"
          android:layout_toRightOf="@+id/TimeZone1_Start"
          android:gravity="center_vertical|center_horizontal"
          android:text="@string/textView_StartTime1"
          android:textSize="24sp"
          android:textStyle="bold" />

      <Button
          android:id="@+id/TImeZone1_End"
          android:layout_width="80dp"
          android:layout_height="wrap_content"

          android:layout_below="@+id/TimeZone1_Enable"
          android:layout_toEndOf="@+id/TimeZone1_Start_Text"
          android:layout_toRightOf="@+id/TimeZone1_Start_Text"
          android:text="@string/button_EndTime1"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/TimeZone1_End_Text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_alignBottom="@+id/TImeZone1_End"
          android:layout_below="@+id/TimeZone1_Enable"
          android:layout_toEndOf="@+id/TImeZone1_End"
          android:layout_toRightOf="@+id/TImeZone1_End"
          android:gravity="center_vertical|center_horizontal"
          android:text="@string/textView_StartTime1"
          android:textSize="24sp"
          android:textStyle="bold" />

      <CheckBox
          android:id="@+id/TimeZone2_Enable"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_above="@+id/TimeZone2_Start"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:text="@string/checkBox_Time2" />

      <Button
          android:id="@+id/TimeZone2_Start"
          android:layout_width="80dp"
          android:layout_height="wrap_content"

          android:layout_above="@+id/ReferencedToTheHour"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:text="@string/button_StartTime2"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/TimeZone2_Start_Text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/TimeZone2_Start"

          android:layout_alignTop="@+id/TimeZone2_Start"
          android:layout_toEndOf="@+id/TimeZone2_Start"
          android:layout_toRightOf="@+id/TimeZone2_Start"
          android:gravity="center_vertical|center_horizontal"
          android:text="@string/textView_EndTime2"
          android:textSize="24sp"
          android:textStyle="bold" />

      <Button
          android:id="@+id/TImeZone2_End"
          android:layout_width="80dp"
          android:layout_height="wrap_content"

          android:layout_below="@+id/TimeZone2_Enable"
          android:layout_toEndOf="@+id/TimeZone2_Start_Text"
          android:layout_toRightOf="@+id/TimeZone2_Start_Text"
          android:text="@string/button_EndTime2"
          android:textSize="12sp" />

      <TextView
          android:id="@+id/TImeZone2_End_Text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_above="@+id/ReferencedToTheHour"
          android:layout_alignTop="@+id/TImeZone2_End"
          android:layout_toEndOf="@+id/TImeZone2_End"
          android:layout_toRightOf="@+id/TImeZone2_End"
          android:gravity="center_vertical|center_horizontal"
          android:text="@string/textView_EndTime2"
          android:textSize="24sp"
          android:textStyle="bold" />

      <CheckBox
          android:id="@+id/ReferencedToTheHour"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_above="@+id/textView"
          android:layout_alignEnd="@+id/TImeZone2_End_Text"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_alignRight="@+id/TImeZone2_End_Text"
          android:text="@string/checkbox_ReferencedToTheHour"
          app:layout_constraintStart_toStartOf="parent" />

      <Button
          android:id="@+id/intervalDecrease"
          android:layout_width="40dp"
          android:layout_height="wrap_content"

          android:layout_above="@+id/textView2"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:text="@string/decrease"
          android:textSize="8sp"
          app:layout_constraintLeft_toLeftOf="parent"
          tools:ignore="SmallSp"
          tools:layout_editor_absoluteY="297dp" />

      <SeekBar
          android:id="@+id/intervalSeekBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"


          android:layout_above="@+id/intervalDecrease"
          android:layout_alignEnd="@+id/intervalIncrease"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_alignRight="@+id/intervalIncrease"
          android:max="58"
          android:visibility="visible"
          tools:layout_editor_absoluteY="16dp" />

      <Button
          android:id="@+id/intervalIncrease"
          android:layout_width="40dp"
          android:layout_height="wrap_content"

          android:layout_alignEnd="@+id/intervalNumber"
          android:layout_alignRight="@+id/intervalNumber"
          android:layout_below="@+id/intervalSeekBar"
          android:maxWidth="5dp"
          android:text="@string/increase"
          android:textAllCaps="false"
          android:textIsSelectable="false"
          android:textSize="8sp"
          app:layout_constraintRight_toRightOf="parent"
          tools:ignore="SmallSp" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_above="@+id/intervalSeekBar"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_alignTop="@+id/intervalNumber"
          android:layout_toLeftOf="@+id/intervalNumber"
          android:layout_toStartOf="@+id/intervalNumber"
          android:gravity="center_vertical"
          android:text="@string/text_RepeaterInterval"
          android:textSize="14sp"
          android:textStyle="bold"
          android:visibility="visible"
          app:layout_constraintStart_toStartOf="parent"
          tools:layout_editor_absoluteY="290dp" />

      <TextView
          android:id="@+id/intervalNumber"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_above="@+id/intervalSeekBar"
          android:layout_alignEnd="@+id/ReferencedToTheHour"
          android:layout_alignRight="@+id/ReferencedToTheHour"
          android:gravity="end"
          android:paddingEnd="8dp"
          android:paddingStart="8dp"
          android:text="@string/_60"
          android:textSize="24sp"
          android:textStyle="bold"
          tools:layout_editor_absoluteX="39dp"
          tools:layout_editor_absoluteY="319dp" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_alignBottom="@+id/nextTime"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_alignTop="@+id/nextTime"
          android:layout_toLeftOf="@+id/nextTime"
          android:layout_toStartOf="@+id/nextTime"
          android:gravity="center_vertical|center_horizontal"
          android:text="@string/textView_NextTimeText"
          android:textSize="14sp"
          android:textStyle="bold"
          android:visibility="visible"
          app:layout_constraintBottom_toBottomOf="parent"
          tools:layout_editor_absoluteX="4dp" />

      <TextView
          android:id="@+id/nextTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"


          android:layout_above="@+id/nowTimeButton"
          android:layout_toLeftOf="@+id/nextTimeOffset"
          android:layout_toStartOf="@+id/nextTimeOffset"
          android:foregroundGravity="left|center_vertical"
          android:gravity="start|center_vertical"
          android:paddingLeft="4dp"
          android:paddingRight="4dp"
          android:text="@string/textView_Time"
          android:textSize="24sp"
          android:textStyle="bold"
          android:visibility="visible"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/textView2"
          app:layout_constraintTop_toBottomOf="@+id/intervalSeekBar" />

      <TextView
          android:id="@+id/nextTimeOffset"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/nextTime"
          android:layout_alignEnd="@+id/intervalIncrease"
          android:layout_alignRight="@+id/intervalIncrease"
          android:text="@string/textView_Offset"
          android:textSize="18sp" />

      <Button
          android:id="@+id/nowTimeButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"


          android:layout_alignEnd="@+id/textView2"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_alignRight="@+id/textView2"
          android:text="@string/button_SoundTest"
          android:textSize="12sp"
          android:visibility="visible"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          tools:layout_editor_absoluteY="37dp" />

      <TextView
          android:id="@+id/nowTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"


          android:layout_alignParentBottom="true"
          android:layout_below="@+id/nextTime"
          android:layout_toLeftOf="@+id/nowTimeOffset"
          android:layout_toStartOf="@+id/nowTimeOffset"
          android:gravity="start|center_vertical"
          android:paddingLeft="4dp"
          android:paddingRight="4dp"
          android:text="@string/textView_Time"
          android:textSize="24sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintRight_toRightOf="parent" />

      <TextView
          android:id="@+id/nowTimeOffset"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/nowTime"
          android:layout_alignBottom="@+id/nowTime"
          android:layout_alignLeft="@+id/nextTimeOffset"
          android:layout_alignStart="@+id/nextTimeOffset"
          android:text="@string/textView_Offset"
          android:textSize="18sp" />

      <Space
          android:id="@+id/space"
          android:layout_width="120dp"
          android:layout_height="wrap_content"
          android:layout_above="@+id/textView2"
          android:layout_below="@+id/intervalSeekBar"
          android:layout_toEndOf="@+id/intervalDecrease"
          android:layout_toLeftOf="@+id/intervalIncrease"
          android:layout_toRightOf="@+id/intervalDecrease"
          android:layout_toStartOf="@+id/intervalIncrease" />

   </RelativeLayout>

   <ToggleButton
       android:id="@+id/runOnBootComplete"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:text="@string/executeOnBootComplete"
       android:textOff="@string/executeOnBootComplete_off"
       android:textOn="@string/executeOnBootComplete_on"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>